fixed issue of tickets not wrapping around

--- a/style.css
+++ b/style.css
@@ -130,6 +130,7 @@
 /* Ticket Design */
 .main-cont {
   display: flex;
+  flex-wrap: wrap;
   gap: 2rem;
   justify-content: center;
   margin-top: 2rem;
